# cosven

./: CMakeLists.txt  README.md  install.sh  readme.md
inc/: camera.hpp  demo.hpp  earth.hpp  figures.hpp  model.hpp  orbit_camera.hpp  ring.hpp  sat_demo.hpp  satellite.hpp  satellite_model.hpp  shaderHandler.hpp  skybox.hpp
shaders/: earth_fshader.glsl  earth_vshader.glsl  fshader_satellite.glsl  ringsegment_fshader.glsl  ringsegment_vshader.glsl  satellite_fshader.glsl  satellite_vshader.glsl  skybox_fshader.glsl  skybox_vshader.glsl  torus_fshader.glsl
src/: demo.cpp  demo_mvc.cpp  demo_mvc.hpp  earth.cpp  figures.cpp  fshader.glsl  fshader_earth.glsl  main.cpp  model.cpp  ring.cpp  satellite.cpp  satellite_model.cpp  shaderHandler.cpp  skybox.cpp  vshader.glsl  vshader_earth.glsl  vshader_wings.glsl
